--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <link rel="shortcut icon" href="src/assets/yinyang.ico" type="image/x-icon">
   <link rel="icon" href="src/assets/yinyang.ico" type="image/x-icon">
   <meta charset="utf-8">
-  <meta name="og:site_name" content="Touhou Character Sorting">
-  <meta name="og:description" content="A simple website for sorting Touhou characters in a formatted list.">
+  <meta name="og:site_name" content="Final Fantasy XIV Instance Sorting">
+  <meta name="og:description" content="A simple website for sorting Final Fantasy XIV Instances in a formatted list.">
   <meta name="og:image" content="https://i.imgur.com/IZzJMk6.jpg">
   <title>Touhou Character Sorting</title>
 
@@ -67,14 +67,14 @@
     <div class="results"></div>
 
     <div class="info">
-        <a href="https://relick.me/song/">Song Sorter</a> | <a href="mailto:fera@imouto.my">Contact</a> | <a href="https://github.com/execfera/charasort/">Source Code</a> | <a href="?IwVmE4CZNAGSBs5YB8QA5zAMzoCwqzCxEmnDGVkkUXVHEON1lW0tPOn1s9suNyTGr3Y0G3QcN4SBQunNaCxC+pPLsuqreNob5MylKOtuk5RoWGlenhM63TInfyNSRS-aKuaDV+7bKjrJ8wbpClhyu1BZ6bnKG8R5m5kHOHly6gariITE2vvyRxpocZtqW8moxpZ7GGbmlmbGilZXe6j75CSGtLnbAhAxAA">Best Taste</a> | <a class="clearsave">Clear Save Data</a>
+       <a href="https://github.com/Mr-Carter13/XIVInstanceSort/">Source Code</a> | <a class="clearsave">Clear Save Data</a>
         
         <br><br>
 
-        <p>Sorter for Touhou characters. Pick your sources, and hit the Start button.</p>
+        <p>Sorter for Final Fantasy XIV Instances. Pick your sources, and hit the Start button.</p>
         <p><strong>Certain options have details that you can hover to read.</strong></p>
-        <p>Click on the character you like better from the two, or tie them if you like them equally or don't know them.</p>
-        <p>Depending on how many sources you pick, you'll get up to 700+ picks, so set aside a good few cups of tea for this.</p>
+        <p>Click on the instance you like better from the two, or tie them if you like them equally or don't know them.</p>
+        <p>Depending on how many sources you pick, you'll get up to 700+ picks, so set aside some time to complete.</p>
 
         <br><br>
 
@@ -88,10 +88,7 @@
 
         <br><br>
 
-        <p>May 9th, 2021 - Added Unconnected Marketeers (full).</p>
-        <p>March 29th, 2021 - Added Unconnected Marketeers (trial).</p>
-        <p>October 5th, 2019 - Added filter for nameless characters.</p>
-        <p>October 4th, 2019 - Added Wily Beast and Weakest Creature (full).</p>
+      <p>Sep 13th, 2021 - Initial Release.</p>
     </div>
 </div>
 </body>
