--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="og:site_name" content="Final Fantasy XIV Instance Sorting">
   <meta name="og:description" content="A simple website for sorting Final Fantasy XIV Instances in a formatted list.">
   <meta name="og:image" content="https://i.imgur.com/IZzJMk6.jpg">
-  <title>Touhou Character Sorting</title>
+  <title>FFXIV Instance Sorting</title>
 
   <link rel="stylesheet" type="text/css" href="src/css/reset.css">
   <link rel="stylesheet" type="text/css" href="src/css/styles.css">
@@ -42,7 +42,7 @@
     <div class="sorter">
         <img src="src/assets/defaultL.jpg" class="left sort image">
 
-        <div class="starting start button">Touhou Project Character Sorter<br><br>Click to Start!</div>
+        <div class="starting start button">FFXIV Instance Sorter<br><br>Click to Start!</div>
         <div class="starting load button">Load <span></span></div>
 
         <div class="loading button"><div></div><span>Loading...</span></div>
